--- a/Wikipedia.ipynb
+++ b/Wikipedia.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exclude ()\n",
+    "### Seperate ()\n",
     "> พยายามหลีกเลี่ยงการใช้ วงเล็บ หรือเครื่องหมายอื่นที่ไม่เกี่ยวกับชื่อบทความ ถ้าไม่จำเป็น  \n",
     ">  \n",
     "> วงเล็บต่อท้ายใช้เพื่อแก้ความกำกวม เช่น บาท (สกุลเงิน) กับ บาท (ร้อยกรอง) และในการเขียนให้เว้นวรรคระหว่างคำและวงเล็บ เช่น บาท (สกุลเงิน) ไม่ใช่ บาท(สกุลเงิน) ถ้าคำมีความหมายเดียว หรือไม่คาดว่าจะกำกวมกับเรื่องอื่น ให้ใช้ บัว แทนที่จะเป็น บัว (พรรณไม้)"
