add: reference to title data

--- a/Wikipedia.ipynb
+++ b/Wikipedia.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Wikipedia Title cleaner"
+    "# Wikipedia Title \n",
+    "\n",
+    "Using [thwiki-latest-all-titles-in-ns0](https://dumps.wikimedia.org/thwiki/latest/)"
    ]
   },
   {
