Add: remove non-thai
simple thai-char count

--- a/Wikipedia.ipynb
+++ b/Wikipedia.ipynb
@@ -11,11 +11,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pythainlp"
+    "import pythainlp\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.seed(334)"
    ]
   },
   {
@@ -49,6 +59,125 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ความส่องสว่างของอุปราคา',\n",
+       " 'เฮนรีที่_6_แห่งเยอรมนี',\n",
+       " 'สมเด็จพระเจ้าหลานเธอ_เจ้าฟ้าบุญเมือง_กรมหลวงธิเบศรบดินทร์',\n",
+       " 'โรงยิมเปียงยาง',\n",
+       " 'กวีโดเนียมอนเตเชลีโอ',\n",
+       " 'ไทยแลนด์_อเมเจอร์ลีก_ฤดูกาล_2562_–_โซนภาคเหนือ',\n",
+       " 'แว่วเสียงเรไร',\n",
+       " 'โบสถ์นักบุญซีโมนและนักบุญเฮเลนา',\n",
+       " 'พระราชวังหลวงเซ็นโต',\n",
+       " 'อะโรวาน่า',\n",
+       " 'เกาะกวาดัลคะแนล',\n",
+       " 'ดิวิชันไลโคไฟตา',\n",
+       " 'ซุ่นกุ้ยเหริน',\n",
+       " 'ดึสเซิลดอร์ฟ',\n",
+       " 'กีฬาบาสเกตบอลในโอลิมปิกฤดูร้อน_1996',\n",
+       " 'ซุนดาโมจิ',\n",
+       " 'เปาโล_เฟร์ไรรา',\n",
+       " 'ประเทศซาอุดีอารเบีย',\n",
+       " 'นะระ_(เมือง)',\n",
+       " 'กั๊ตจัง',\n",
+       " 'มิซาร์_ชิด',\n",
+       " 'สกุลกะทกรก',\n",
+       " 'มอนบูโช',\n",
+       " 'รายชื่อกษัตริย์เกาหลี',\n",
+       " 'อ.โคกสูง',\n",
+       " 'ภาษาออสเซเตียน',\n",
+       " 'ตะวัน_ศรีปาน',\n",
+       " 'ปาโบล_เอสโคบา',\n",
+       " 'การขยายในคอร์เทกซ์',\n",
+       " 'ค.ศ._1186',\n",
+       " 'ค.ศ._1520',\n",
+       " 'กูปปะลิงส์',\n",
+       " 'สตาร์_วอร์ส:_สงครามโคลน_(ภาพยนตร์)',\n",
+       " 'พสิษฐ์_ธนชัยบุญยรัตน์',\n",
+       " 'เอลล่า_ฟิตเจอรัลด์',\n",
+       " 'วันทหารม้า',\n",
+       " 'สมเด็จพระสันตะปาปาจอห์นที่_23',\n",
+       " 'มารีนาดากลูเรีย',\n",
+       " 'รัฐบาลประชาคมผู้พูดภาษาเยอรมัน',\n",
+       " 'นครลำปาง_(แก้ความกำกวม)',\n",
+       " 'ตำบลแอฆีลีเยโจนูบี',\n",
+       " 'ฮีโร่ขี้อาย_หัวใจไฟเตอร์',\n",
+       " 'ดับเบิลยูดับเบิลยูอี_เวิลด์เฮฟวี่เวท_แชมเปียนชิพ',\n",
+       " 'รีอา_(ดาวบริวาร)',\n",
+       " 'พ.ศ._1036',\n",
+       " 'ชินวุฒ_อินทรคูสิน',\n",
+       " 'ล่าข้ามศตวรรษ',\n",
+       " 'วาสนา_สิทธิเวช',\n",
+       " 'โรงเรียนม่วงสามสิบอัมพวันวิทยา',\n",
+       " 'สารให้ความหวาน',\n",
+       " 'ย่าหยา',\n",
+       " 'เตลังคานาราษฎรสมิติ',\n",
+       " '1900_(แก้ความกำกวม)',\n",
+       " 'สเต็พเพ็นวูลฟ์',\n",
+       " 'ปรงเขา',\n",
+       " 'รซมะฮ์_มันโซร์',\n",
+       " 'อาร์เอ็นเอไวรัส',\n",
+       " 'จิบะ',\n",
+       " 'ชาวสโลวีน',\n",
+       " 'สมเด็จพระเจ้าวิลเลมที่_3_แห่งเนเธอร์แลนด์',\n",
+       " 'แกรนด์ดัชเชสเยเลนา_วลาดีมีรอฟนาแห่งรัสเซีย',\n",
+       " 'ลอสแองเจลิส',\n",
+       " 'โรคกล้ามเนื้อเสียการประสานงานจากสมองน้อยและไขสันหลังที่ถ่ายทอดทางโครโมโซมเพศแบบด้อย',\n",
+       " 'พระมหาปชาบดีเถรี',\n",
+       " 'คลองบางนางเกรง',\n",
+       " 'โรบิน_(ตัวละคร)',\n",
+       " 'เป้_สเลอ',\n",
+       " 'พระเจ้าซาร์อีวาน_สเตฟานแห่งบัลแกเรีย',\n",
+       " 'การทอดไมตรี',\n",
+       " 'ไบโอส',\n",
+       " 'อัลแบร์โต_อากวิลานี่',\n",
+       " 'แอฟริกาคัพออฟเนชันส์_2019_กลุ่ม_เอ',\n",
+       " 'สังสาระวัฏ',\n",
+       " 'พ.ศ._2251',\n",
+       " 'ฟุตบอลทีมชาติสกอตแลนด์',\n",
+       " 'ปลากระเบนแม่กลอง',\n",
+       " 'ตระกูลภาษาออสโตรเนเชียน',\n",
+       " 'กรีนบุ๊ค',\n",
+       " 'อิวาเตะ_(เมือง)',\n",
+       " 'รศ.ดร.อิสสรีย์_หรรษาจรูญโรจน์',\n",
+       " 'นาโต',\n",
+       " 'ผู้ใหญ่',\n",
+       " 'สหพันธรัฐรัสเซียในโอลิมปิกฤดูหนาว_2002',\n",
+       " 'เจมส์_(วงดนตรี)',\n",
+       " 'แม่น้ำอากูซัน',\n",
+       " 'มานวยล์_แซตเทอร์นิโน่_ดา_กอสตา',\n",
+       " 'ซิกนัส_(Siarnaq)',\n",
+       " 'ระบบอัตโนมัติ',\n",
+       " 'ประเทศรวันดาในโอลิมปิก',\n",
+       " 'ประวัติศาสตร์ประเทศกรีซ',\n",
+       " 'ซอนนี่_มานาคาเน่',\n",
+       " 'มาร์ติน_ชเกอร์เตล',\n",
+       " 'แชมป์สแมคดาวน์แทกทีม_WWE',\n",
+       " 'มึนส์เทอร์',\n",
+       " 'เกวลิน_ศรีวรรณา',\n",
+       " 'สาธารณรัฐคิวบา',\n",
+       " 'ประเทศอินโดนีเซียในเอเชียนเกมส์_1951',\n",
+       " 'พระมหาโพธิวงศาจารย์',\n",
+       " 'อำเภอมัซฮัร',\n",
+       " 'ภาษาจอร์เจีย']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.sample(titles, 100)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -64,6 +193,149 @@
     "> ชื่อหัวข้อควรเป็นอักษรไทย  \n",
     "> ...  \n",
     "> ทั้งนี้ มีข้อยกเว้นบางประการที่ไม่ต้องใช้อักษรไทยเป็นชื่อบทความ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "284298"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# simply exclude titles that have no Thai characters\n",
+    "titles_temp = [title for title in titles if pythainlp.util.countthai(title) > 0.1]\n",
+    "titles = titles_temp\n",
+    "\n",
+    "len(titles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['มิตต์_รอมนี่ย์',\n",
+       " 'อะมอนอะมาร์ท',\n",
+       " 'เคที_โฮลมส์',\n",
+       " 'ทีมชาติที่ลงแข่งขันฟุตบอลโลก_รุ่นอายุไม่เกิน_20_ปี',\n",
+       " 'สโมสรฟุตบอลพัทยา',\n",
+       " 'สาธารณรัฐฟิลิปปินส์ที่หนึ่ง',\n",
+       " 'อ.พัฒนานิคม',\n",
+       " 'พระแม่มารีบนระเบียง_(บอตติเชลลี)',\n",
+       " 'กรุงโรม',\n",
+       " 'รัชทายาทโดยพฤตินัย',\n",
+       " 'เครื่องหมายและ',\n",
+       " 'คอร์_พัลโมนาลี',\n",
+       " 'ไชยา_สิงห์ชัชวาลย์',\n",
+       " 'พลพจน์_พูลนิล',\n",
+       " 'กล้องจุลทรรศน์อิเล็กตรอนชนิดส่องกราด',\n",
+       " 'เซอร์เบียนซูเปอร์ลีกา',\n",
+       " 'ชาลส์_วีตสตัน',\n",
+       " 'ชาวลัตเวีย',\n",
+       " 'ซีเวิร์ต',\n",
+       " 'บอมบาร์ดิเอร์_ซีอาร์เจ',\n",
+       " 'รดมยศ_มาตเจือ',\n",
+       " 'มเหสี_(แก้ความกำกวม)',\n",
+       " 'โอเอะคาคิ',\n",
+       " 'บรรพต_วีระรัฐ',\n",
+       " 'เฮลโลเวิลด์',\n",
+       " '์',\n",
+       " 'การลงประชามติการเลือกตั้งประธานาธิบดีฝรั่งเศสผ่านหลักการออกเสียงทั่วไป',\n",
+       " 'พ.ศ._789',\n",
+       " 'นัตสึมิ_ทาคาโมริ',\n",
+       " 'อ.พิบูลย์รักษ์',\n",
+       " 'พระเจ้าชาร์ลส์ที่_1_แห่งซิซิลี',\n",
+       " 'ศิลปะเกี่ยวกับความตาย',\n",
+       " 'ตำบลซีกอร์',\n",
+       " 'กลุ่มภาษาสแกนดิเนเวีย',\n",
+       " 'เฟร์นันดินญู',\n",
+       " 'พัก_กึนฮเย',\n",
+       " 'องค์การบริหารส่วนตำบลช้างเผือก_(จังหวัดเชียงใหม่)',\n",
+       " 'พระแก้วมรกต',\n",
+       " 'อุมแบร์โตที่_2_แห่งอิตาลี',\n",
+       " 'พรินเตอร์อิงค์เจ็ต',\n",
+       " 'อิมเพรสชันนิซึมยุคหลัง',\n",
+       " 'ทางหลวงแผ่นดินหมายเลข_216',\n",
+       " 'แคโรทีน',\n",
+       " 'คณะเภสัชศาสตร์_มหาวิทยาลัยพะเยา',\n",
+       " 'สนธิสัญญาเคลลอก–บริยอง',\n",
+       " 'โก_(โปเกมอน)',\n",
+       " 'วิคเตอร์_โอซิมเฮน',\n",
+       " 'วัดทวีวัฒนาราม',\n",
+       " 'เดอะโมสต์บิวตีฟูลเกิร์ลอินเดอะเวิลด์_(เพลงพรินซ์)',\n",
+       " 'กรุงปราก',\n",
+       " 'สถานีวิทยุโทรทัศน์แห่งชาติอิตาลี',\n",
+       " '211_อิซอลดา',\n",
+       " 'ครี้ด_บ่มแชมป์เลือดนักชก',\n",
+       " 'เจ้าชมพู',\n",
+       " 'ลิซาร์ด_(หนังสือการ์ตูน)',\n",
+       " 'บ็อบ_ฮิคกี้',\n",
+       " 'พระเยซูเรียกนักบุญแม็ทธิว_(คาราวัจโจ)',\n",
+       " 'เขตอาดาจิ',\n",
+       " 'อะเพลซวิทโนเนม',\n",
+       " 'โดเมน',\n",
+       " 'โรงพยาบาลบ้านแพ้ว',\n",
+       " 'บันดาร์_เบรา',\n",
+       " 'สมาคมวอลเลย์บอลจีน',\n",
+       " 'พระเจ้าวาสลัฟที่_3_แห่งโบฮีเมีย',\n",
+       " 'อะเลคซันดร์_รุตสคอย',\n",
+       " 'ข้อความคาดการณ์ของก็อลท์บัค',\n",
+       " 'อุกฤษณ์_วงศ์มีมา',\n",
+       " 'โรซา_เมนเดส',\n",
+       " 'กระจับนก',\n",
+       " 'เรือดำน้ำแบบ_039เอ',\n",
+       " 'ปลาวาฬหัวทุย',\n",
+       " 'แพทย์แผนไทย',\n",
+       " 'เรื่องอื้อฉาวเบอร์ฮัดการพัฒนา_1มาเลเซีย',\n",
+       " 'สตาดีโอโอลิมปีโกโตริโน',\n",
+       " 'วัดตะเคียน_(จังหวัดนนทบุรี)',\n",
+       " 'ศูนย์ควบคุมและป้องกันโรคแห่งยุโรป',\n",
+       " 'ประวัติโรงเรียนสามัคคีวิทยาคม',\n",
+       " 'อี_ฟอร์_แอล_เอม',\n",
+       " 'ขุนปลดปรปักษ์',\n",
+       " 'นอนหลับ',\n",
+       " 'กลุ่มดาวช่างแกะสลัก',\n",
+       " 'โปรคารีโอต',\n",
+       " 'ดับเบิลยูซีดับเบิลยู_อินเตอร์เนชั่นแนล_เวิลด์เฮฟวี่เวท_แชมเปี้ยนชิพ',\n",
+       " 'จู_ปาเจี้ย',\n",
+       " 'คณะผู้แทนสังเกตการณ์ของสหประชาชาติประจำชายแดนอิรัก–คูเวต',\n",
+       " 'อะกริวอลเทอิก',\n",
+       " 'พระเจ้าบรมวงศ์เธอ_พระองค์เจ้าลดาวัลย์_กรมหมื่นภูมินทรภักดี',\n",
+       " 'เบอร์เคเลียม',\n",
+       " 'เปอร์โตรีโก',\n",
+       " 'กีฬาวอลเลย์บอลในโอลิมปิกฤดูร้อน_2024',\n",
+       " 'ตำบลคำหว้า',\n",
+       " 'คดีระหว่างโรกับเวด',\n",
+       " 'ปลุกปั่นให้ขัดขืนอำนาจปกครอง',\n",
+       " 'ค.ศ._599',\n",
+       " 'สาธารณรัฐอัลไต',\n",
+       " 'ทรีตเมนต์แอ็กชั่นแคมเปญ',\n",
+       " 'จุงอิจิ_อินาโมโตะ',\n",
+       " 'พ.ศ._492',\n",
+       " 'สาบานว่าพูดจริง_To_Tell_The_Truth',\n",
+       " 'ประเทศสเปนในโอลิมปิกฤดูร้อน_1984']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.sample(titles, 100)"
    ]
   },
   {
