--- a/Wikipedia.ipynb
+++ b/Wikipedia.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "362955"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,115 +60,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ความส่องสว่างของอุปราคา',\n",
-       " 'เฮนรีที่_6_แห่งเยอรมนี',\n",
-       " 'สมเด็จพระเจ้าหลานเธอ_เจ้าฟ้าบุญเมือง_กรมหลวงธิเบศรบดินทร์',\n",
-       " 'โรงยิมเปียงยาง',\n",
-       " 'กวีโดเนียมอนเตเชลีโอ',\n",
-       " 'ไทยแลนด์_อเมเจอร์ลีก_ฤดูกาล_2562_–_โซนภาคเหนือ',\n",
-       " 'แว่วเสียงเรไร',\n",
-       " 'โบสถ์นักบุญซีโมนและนักบุญเฮเลนา',\n",
-       " 'พระราชวังหลวงเซ็นโต',\n",
-       " 'อะโรวาน่า',\n",
-       " 'เกาะกวาดัลคะแนล',\n",
-       " 'ดิวิชันไลโคไฟตา',\n",
-       " 'ซุ่นกุ้ยเหริน',\n",
-       " 'ดึสเซิลดอร์ฟ',\n",
-       " 'กีฬาบาสเกตบอลในโอลิมปิกฤดูร้อน_1996',\n",
-       " 'ซุนดาโมจิ',\n",
-       " 'เปาโล_เฟร์ไรรา',\n",
-       " 'ประเทศซาอุดีอารเบีย',\n",
-       " 'นะระ_(เมือง)',\n",
-       " 'กั๊ตจัง',\n",
-       " 'มิซาร์_ชิด',\n",
-       " 'สกุลกะทกรก',\n",
-       " 'มอนบูโช',\n",
-       " 'รายชื่อกษัตริย์เกาหลี',\n",
-       " 'อ.โคกสูง',\n",
-       " 'ภาษาออสเซเตียน',\n",
-       " 'ตะวัน_ศรีปาน',\n",
-       " 'ปาโบล_เอสโคบา',\n",
-       " 'การขยายในคอร์เทกซ์',\n",
-       " 'ค.ศ._1186',\n",
-       " 'ค.ศ._1520',\n",
-       " 'กูปปะลิงส์',\n",
-       " 'สตาร์_วอร์ส:_สงครามโคลน_(ภาพยนตร์)',\n",
-       " 'พสิษฐ์_ธนชัยบุญยรัตน์',\n",
-       " 'เอลล่า_ฟิตเจอรัลด์',\n",
-       " 'วันทหารม้า',\n",
-       " 'สมเด็จพระสันตะปาปาจอห์นที่_23',\n",
-       " 'มารีนาดากลูเรีย',\n",
-       " 'รัฐบาลประชาคมผู้พูดภาษาเยอรมัน',\n",
-       " 'นครลำปาง_(แก้ความกำกวม)',\n",
-       " 'ตำบลแอฆีลีเยโจนูบี',\n",
-       " 'ฮีโร่ขี้อาย_หัวใจไฟเตอร์',\n",
-       " 'ดับเบิลยูดับเบิลยูอี_เวิลด์เฮฟวี่เวท_แชมเปียนชิพ',\n",
-       " 'รีอา_(ดาวบริวาร)',\n",
-       " 'พ.ศ._1036',\n",
-       " 'ชินวุฒ_อินทรคูสิน',\n",
-       " 'ล่าข้ามศตวรรษ',\n",
-       " 'วาสนา_สิทธิเวช',\n",
-       " 'โรงเรียนม่วงสามสิบอัมพวันวิทยา',\n",
-       " 'สารให้ความหวาน',\n",
-       " 'ย่าหยา',\n",
-       " 'เตลังคานาราษฎรสมิติ',\n",
-       " '1900_(แก้ความกำกวม)',\n",
-       " 'สเต็พเพ็นวูลฟ์',\n",
-       " 'ปรงเขา',\n",
-       " 'รซมะฮ์_มันโซร์',\n",
-       " 'อาร์เอ็นเอไวรัส',\n",
-       " 'จิบะ',\n",
-       " 'ชาวสโลวีน',\n",
-       " 'สมเด็จพระเจ้าวิลเลมที่_3_แห่งเนเธอร์แลนด์',\n",
-       " 'แกรนด์ดัชเชสเยเลนา_วลาดีมีรอฟนาแห่งรัสเซีย',\n",
-       " 'ลอสแองเจลิส',\n",
-       " 'โรคกล้ามเนื้อเสียการประสานงานจากสมองน้อยและไขสันหลังที่ถ่ายทอดทางโครโมโซมเพศแบบด้อย',\n",
-       " 'พระมหาปชาบดีเถรี',\n",
-       " 'คลองบางนางเกรง',\n",
-       " 'โรบิน_(ตัวละคร)',\n",
-       " 'เป้_สเลอ',\n",
-       " 'พระเจ้าซาร์อีวาน_สเตฟานแห่งบัลแกเรีย',\n",
-       " 'การทอดไมตรี',\n",
-       " 'ไบโอส',\n",
-       " 'อัลแบร์โต_อากวิลานี่',\n",
-       " 'แอฟริกาคัพออฟเนชันส์_2019_กลุ่ม_เอ',\n",
-       " 'สังสาระวัฏ',\n",
-       " 'พ.ศ._2251',\n",
-       " 'ฟุตบอลทีมชาติสกอตแลนด์',\n",
-       " 'ปลากระเบนแม่กลอง',\n",
-       " 'ตระกูลภาษาออสโตรเนเชียน',\n",
-       " 'กรีนบุ๊ค',\n",
-       " 'อิวาเตะ_(เมือง)',\n",
-       " 'รศ.ดร.อิสสรีย์_หรรษาจรูญโรจน์',\n",
-       " 'นาโต',\n",
-       " 'ผู้ใหญ่',\n",
-       " 'สหพันธรัฐรัสเซียในโอลิมปิกฤดูหนาว_2002',\n",
-       " 'เจมส์_(วงดนตรี)',\n",
-       " 'แม่น้ำอากูซัน',\n",
-       " 'มานวยล์_แซตเทอร์นิโน่_ดา_กอสตา',\n",
-       " 'ซิกนัส_(Siarnaq)',\n",
-       " 'ระบบอัตโนมัติ',\n",
-       " 'ประเทศรวันดาในโอลิมปิก',\n",
-       " 'ประวัติศาสตร์ประเทศกรีซ',\n",
-       " 'ซอนนี่_มานาคาเน่',\n",
-       " 'มาร์ติน_ชเกอร์เตล',\n",
-       " 'แชมป์สแมคดาวน์แทกทีม_WWE',\n",
-       " 'มึนส์เทอร์',\n",
-       " 'เกวลิน_ศรีวรรณา',\n",
-       " 'สาธารณรัฐคิวบา',\n",
-       " 'ประเทศอินโดนีเซียในเอเชียนเกมส์_1951',\n",
-       " 'พระมหาโพธิวงศาจารย์',\n",
-       " 'อำเภอมัซฮัร',\n",
-       " 'ภาษาจอร์เจีย']"
+       "['ซัลวาตอร์_มุนดี_(เลโอนาร์โด)',\n",
+       " 'อุลโม',\n",
+       " 'ภูเข้',\n",
+       " 'ราชอาณาจักรฮัชไมต์จอร์แดนในโอลิมปิกฤดูร้อน_1988',\n",
+       " 'Taksinus',\n",
+       " 'พลตำรวจเอกวสิษฐ_เดชกุญชร',\n",
+       " 'พระบาทรามเชิงไพร',\n",
+       " 'ฟุตบอลโต๊ะ',\n",
+       " 'คอลตัน_เฮย์เนส',\n",
+       " 'Alex_Meraz',\n",
+       " 'ตะพาบสวน',\n",
+       " 'รายชื่อตอนในคุณครูจอมเวท_เนกิมะ!',\n",
+       " 'Hedychium_flavum',\n",
+       " 'อักษรพักปา',\n",
+       " 'คัมภีร์ชั้นรอง',\n",
+       " 'Annual_plant',\n",
+       " 'ลาร์เฟอร์รารี่',\n",
+       " 'Microsoft_Math',\n",
+       " 'Min_Letya_of_Ava',\n",
+       " 'Ottoa',\n",
+       " 'กง_มย็อง',\n",
+       " 'แอนโตนิโอ_คาร์ลอส_โจบิม',\n",
+       " 'ดาวแคระน้ำตาล',\n",
+       " 'ซีเอ็น_ทาวเวอร์',\n",
+       " 'เพลงประจำชาติโปแลนด์',\n",
+       " 'เจ้าฟ้ามหาวชิราวุธ',\n",
+       " 'ออลบอร์',\n",
+       " 'Yoshi',\n",
+       " 'สมาคมนักข่าวนักหนังสือพิมพ์แห่งประเทศไทย',\n",
+       " 'อาร์เทอร์_โชเปนฮอยเออร์',\n",
+       " 'Calamus_(palm)',\n",
+       " 'ขบวนการจารชน_โกบัสเตอร์ส',\n",
+       " 'Unterfranken',\n",
+       " 'เวิลด์เรสต์ลิงเอ็นเตอร์เทนเมนต์',\n",
+       " 'ฟุตบอลโลก_1950',\n",
+       " 'คลอร์เตตราไซคลีน',\n",
+       " 'ประเทศเซนต์ลูเชียในโอลิมปิกฤดูร้อน_2024',\n",
+       " 'Rustavi',\n",
+       " 'Anaheim,_California',\n",
+       " 'วัดไทยสิริราชคฤห์',\n",
+       " 'คาร์คิฟ',\n",
+       " 'ภัยพิบัติวันขอบคุณพระเจ้า',\n",
+       " 'คอร์เทกซ์การเห็นสัมพันธ์',\n",
+       " 'ยูซาวะ_(จังหวัดอากิตะ)',\n",
+       " 'ရခုိင္\\u200c',\n",
+       " 'เหตุการณ์โรงงานอบลำใยระเบิด_พ.ศ._2542',\n",
+       " 'คะสึชิกะ',\n",
+       " 'ยอดหญิง_ตำนานศิลป์_ซินยุนบก',\n",
+       " 'Super_Mario_64',\n",
+       " 'โรงเรียนเบญจมราชูทิศ_นครศรีธรรมราช',\n",
+       " 'สมเด็จพระเจ้าพี่นางเธอ_เจ้าฟ้ากัลยาณิวัฒนา_กรมหลวงนราธิวาส_ราชนครินทร์',\n",
+       " 'Fukuoka_Airport',\n",
+       " 'ปางสะดุ้งมาร',\n",
+       " 'สุริยา_คล่องผจญ',\n",
+       " 'เวลาในประเทศเลบานอน',\n",
+       " 'แคตตาล็อกเฮนรี_เดรเพอร์',\n",
+       " 'ประตูหลัง_(ความมั่นคงของระบบคอมพิวเตอร์)',\n",
+       " 'เจสส์_กลินน์',\n",
+       " 'บรรพชิต',\n",
+       " 'วงศ์ปลาหนวดฤาษี',\n",
+       " 'Alberto_Del_Rio',\n",
+       " 'ปลาหมูฮ่องเต้',\n",
+       " '12_มี.ค.',\n",
+       " 'Gift_(แก้ความกำกวม)',\n",
+       " 'เจ้าหญิงซีนาตี_เซเอโซแห่งเลโซโท',\n",
+       " 'โฟร์อีฟ',\n",
+       " 'รายชื่อโบราณสถานในจังหวัดปัตตานี',\n",
+       " 'นกกระจาบควาย',\n",
+       " 'กลาดโน',\n",
+       " 'คอร์ดาตา',\n",
+       " 'ราชวงศ์ฉีเหนือ',\n",
+       " 'มงแต็สกีเยอ',\n",
+       " 'หนังสือปกอ่อน',\n",
+       " 'หูก',\n",
+       " 'กบฏเมืองแมนแดนสันติ',\n",
+       " 'แอร์วีน_แอนกาแป็ต',\n",
+       " 'ผักเขียด',\n",
+       " 'ความส่องสว่างของอุปราคา',\n",
+       " 'มณฑลการปกครองของสหราชอาณาจักร',\n",
+       " 'เอฟเอพรีเมียร์ลีก_ฤดูกาล_1993–94',\n",
+       " 'Emanuel_Steward',\n",
+       " 'ยุทธการที่วุร์สเตอร์',\n",
+       " 'องค์การบริหารส่วนตำบลอากาศ',\n",
+       " 'เจิ่น_วัน_ซวน',\n",
+       " 'Abuja',\n",
+       " 'วิริฒิพา_ภักดีประสงค์',\n",
+       " 'โปรสเปอรีดัด',\n",
+       " 'การเพิ่มองค์ประกอบของเซลล์',\n",
+       " 'อียอน_อี._เช._เบรอตียานู',\n",
+       " 'สัตว์น้ำต่างถิ่น',\n",
+       " 'วิวัฒนาการของกระดูกเล็กสำหรับได้ยินของสัตว์เลี้ยงลูกด้วยนม',\n",
+       " 'ปริพันธ์รีมัน',\n",
+       " 'เหตุแทงคนในนิส_พ.ศ._2563',\n",
+       " 'บทนำทฤษฎีสัมพัทธภาพทั่วไป',\n",
+       " 'ประเทศเยอรมนีในโอลิมปิก',\n",
+       " 'กองทัพสหรัฐ',\n",
+       " 'ยานอวกาศโคลัมเบีย',\n",
+       " 'เทรียร์',\n",
+       " 'แคราย',\n",
+       " 'Elfen_Lied']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,6 +189,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Seperate space\n",
+    "Handle the seperated words as different words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "619124"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titles_temp = []\n",
+    "\n",
+    "for title in titles:\n",
+    "    # \"space\" of the title is replaced by \"_\" in the data\n",
+    "    for word in title.split(\"_\"):\n",
+    "        titles_temp.append(word)\n",
+    "        \n",
+    "titles = titles_temp\n",
+    "\n",
+    "len(titles)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exclude non-Thai\n",
     "> ชื่อหัวข้อควรเป็นอักษรไทย  \n",
     "> ...  \n",
@@ -197,16 +234,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "284298"
+       "406281"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,115 +258,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['มิตต์_รอมนี่ย์',\n",
-       " 'อะมอนอะมาร์ท',\n",
-       " 'เคที_โฮลมส์',\n",
-       " 'ทีมชาติที่ลงแข่งขันฟุตบอลโลก_รุ่นอายุไม่เกิน_20_ปี',\n",
-       " 'สโมสรฟุตบอลพัทยา',\n",
-       " 'สาธารณรัฐฟิลิปปินส์ที่หนึ่ง',\n",
-       " 'อ.พัฒนานิคม',\n",
-       " 'พระแม่มารีบนระเบียง_(บอตติเชลลี)',\n",
-       " 'กรุงโรม',\n",
-       " 'รัชทายาทโดยพฤตินัย',\n",
-       " 'เครื่องหมายและ',\n",
-       " 'คอร์_พัลโมนาลี',\n",
-       " 'ไชยา_สิงห์ชัชวาลย์',\n",
-       " 'พลพจน์_พูลนิล',\n",
-       " 'กล้องจุลทรรศน์อิเล็กตรอนชนิดส่องกราด',\n",
-       " 'เซอร์เบียนซูเปอร์ลีกา',\n",
-       " 'ชาลส์_วีตสตัน',\n",
-       " 'ชาวลัตเวีย',\n",
-       " 'ซีเวิร์ต',\n",
-       " 'บอมบาร์ดิเอร์_ซีอาร์เจ',\n",
-       " 'รดมยศ_มาตเจือ',\n",
-       " 'มเหสี_(แก้ความกำกวม)',\n",
-       " 'โอเอะคาคิ',\n",
-       " 'บรรพต_วีระรัฐ',\n",
-       " 'เฮลโลเวิลด์',\n",
-       " '์',\n",
-       " 'การลงประชามติการเลือกตั้งประธานาธิบดีฝรั่งเศสผ่านหลักการออกเสียงทั่วไป',\n",
-       " 'พ.ศ._789',\n",
-       " 'นัตสึมิ_ทาคาโมริ',\n",
-       " 'อ.พิบูลย์รักษ์',\n",
-       " 'พระเจ้าชาร์ลส์ที่_1_แห่งซิซิลี',\n",
-       " 'ศิลปะเกี่ยวกับความตาย',\n",
-       " 'ตำบลซีกอร์',\n",
-       " 'กลุ่มภาษาสแกนดิเนเวีย',\n",
-       " 'เฟร์นันดินญู',\n",
-       " 'พัก_กึนฮเย',\n",
-       " 'องค์การบริหารส่วนตำบลช้างเผือก_(จังหวัดเชียงใหม่)',\n",
-       " 'พระแก้วมรกต',\n",
-       " 'อุมแบร์โตที่_2_แห่งอิตาลี',\n",
-       " 'พรินเตอร์อิงค์เจ็ต',\n",
-       " 'อิมเพรสชันนิซึมยุคหลัง',\n",
-       " 'ทางหลวงแผ่นดินหมายเลข_216',\n",
-       " 'แคโรทีน',\n",
-       " 'คณะเภสัชศาสตร์_มหาวิทยาลัยพะเยา',\n",
-       " 'สนธิสัญญาเคลลอก–บริยอง',\n",
-       " 'โก_(โปเกมอน)',\n",
-       " 'วิคเตอร์_โอซิมเฮน',\n",
-       " 'วัดทวีวัฒนาราม',\n",
-       " 'เดอะโมสต์บิวตีฟูลเกิร์ลอินเดอะเวิลด์_(เพลงพรินซ์)',\n",
-       " 'กรุงปราก',\n",
-       " 'สถานีวิทยุโทรทัศน์แห่งชาติอิตาลี',\n",
-       " '211_อิซอลดา',\n",
-       " 'ครี้ด_บ่มแชมป์เลือดนักชก',\n",
-       " 'เจ้าชมพู',\n",
-       " 'ลิซาร์ด_(หนังสือการ์ตูน)',\n",
-       " 'บ็อบ_ฮิคกี้',\n",
-       " 'พระเยซูเรียกนักบุญแม็ทธิว_(คาราวัจโจ)',\n",
-       " 'เขตอาดาจิ',\n",
-       " 'อะเพลซวิทโนเนม',\n",
-       " 'โดเมน',\n",
-       " 'โรงพยาบาลบ้านแพ้ว',\n",
-       " 'บันดาร์_เบรา',\n",
-       " 'สมาคมวอลเลย์บอลจีน',\n",
-       " 'พระเจ้าวาสลัฟที่_3_แห่งโบฮีเมีย',\n",
-       " 'อะเลคซันดร์_รุตสคอย',\n",
-       " 'ข้อความคาดการณ์ของก็อลท์บัค',\n",
-       " 'อุกฤษณ์_วงศ์มีมา',\n",
-       " 'โรซา_เมนเดส',\n",
-       " 'กระจับนก',\n",
-       " 'เรือดำน้ำแบบ_039เอ',\n",
-       " 'ปลาวาฬหัวทุย',\n",
-       " 'แพทย์แผนไทย',\n",
-       " 'เรื่องอื้อฉาวเบอร์ฮัดการพัฒนา_1มาเลเซีย',\n",
-       " 'สตาดีโอโอลิมปีโกโตริโน',\n",
-       " 'วัดตะเคียน_(จังหวัดนนทบุรี)',\n",
-       " 'ศูนย์ควบคุมและป้องกันโรคแห่งยุโรป',\n",
-       " 'ประวัติโรงเรียนสามัคคีวิทยาคม',\n",
-       " 'อี_ฟอร์_แอล_เอม',\n",
-       " 'ขุนปลดปรปักษ์',\n",
-       " 'นอนหลับ',\n",
-       " 'กลุ่มดาวช่างแกะสลัก',\n",
-       " 'โปรคารีโอต',\n",
-       " 'ดับเบิลยูซีดับเบิลยู_อินเตอร์เนชั่นแนล_เวิลด์เฮฟวี่เวท_แชมเปี้ยนชิพ',\n",
-       " 'จู_ปาเจี้ย',\n",
-       " 'คณะผู้แทนสังเกตการณ์ของสหประชาชาติประจำชายแดนอิรัก–คูเวต',\n",
-       " 'อะกริวอลเทอิก',\n",
-       " 'พระเจ้าบรมวงศ์เธอ_พระองค์เจ้าลดาวัลย์_กรมหมื่นภูมินทรภักดี',\n",
-       " 'เบอร์เคเลียม',\n",
-       " 'เปอร์โตรีโก',\n",
-       " 'กีฬาวอลเลย์บอลในโอลิมปิกฤดูร้อน_2024',\n",
-       " 'ตำบลคำหว้า',\n",
-       " 'คดีระหว่างโรกับเวด',\n",
-       " 'ปลุกปั่นให้ขัดขืนอำนาจปกครอง',\n",
-       " 'ค.ศ._599',\n",
-       " 'สาธารณรัฐอัลไต',\n",
-       " 'ทรีตเมนต์แอ็กชั่นแคมเปญ',\n",
-       " 'จุงอิจิ_อินาโมโตะ',\n",
-       " 'พ.ศ._492',\n",
-       " 'สาบานว่าพูดจริง_To_Tell_The_Truth',\n",
-       " 'ประเทศสเปนในโอลิมปิกฤดูร้อน_1984']"
+       "['เซดิลลา',\n",
+       " 'เอ็ดนา',\n",
+       " 'ซื้องานวิจัย',\n",
+       " 'โบลเดอร์',\n",
+       " 'แอนติบอดีลบล้างฤทธิ์',\n",
+       " 'ชากา',\n",
+       " 'ชิวเชิง',\n",
+       " '(วงดนตรี)',\n",
+       " 'จังหวัดเมิซ',\n",
+       " 'คาร์ลอส',\n",
+       " 'เรย์นะ',\n",
+       " 'ประเภทบุคคลชายผสม',\n",
+       " 'รายชื่อตอนในปริ๊นซ์',\n",
+       " 'นิมิตซ์',\n",
+       " 'สตาร์',\n",
+       " 'สตีเฟน',\n",
+       " 'การเสด็จสู่วาแรน',\n",
+       " 'ฉาย',\n",
+       " 'เรือกรรเชียงคู่พายเดี่ยว',\n",
+       " 'ทะเลดอนฮวน',\n",
+       " 'เมตร',\n",
+       " 'มุกดา',\n",
+       " 'ชินลง',\n",
+       " 'เด็กหญิงไม้ขีดไฟ',\n",
+       " 'เธอทำให้ได้รู้',\n",
+       " 'ฮวนอี้',\n",
+       " 'เดอนี',\n",
+       " 'คาร์ล',\n",
+       " 'ธงชาติปานามา',\n",
+       " 'ราชิด',\n",
+       " 'ตำบลหัวทุ่ง',\n",
+       " 'กลมกล่อม',\n",
+       " 'สาธารณรัฐบุรุนดี',\n",
+       " 'มาร์แชลล์',\n",
+       " 'ดยุกแห่งซัคเซิน-โคบวร์คและโกทา',\n",
+       " 'องค์การต่อต้านฟาสซิสต์',\n",
+       " 'กลึงกล่อม',\n",
+       " 'ดยุกแห่งกัลลิเอรา',\n",
+       " 'ฤดูกาล',\n",
+       " 'ฤดูกาล',\n",
+       " 'ไฮโดรมอร์โฟน',\n",
+       " 'ฟิลิปป์ที่',\n",
+       " 'นางเบญจกาย',\n",
+       " 'รายชื่อนครในประเทศกัมพูชา',\n",
+       " 'เวลาสุริยะจริง',\n",
+       " 'เคียฟ',\n",
+       " 'วังสวนบ้านแก้ว',\n",
+       " 'จิงจฺวี่',\n",
+       " 'จักรพรรดิหลิวซ่งเหวิน',\n",
+       " 'จิรโรจน์',\n",
+       " 'การเปิดเผยอัตลักษณ์ทางเพศของตน',\n",
+       " '(จังหวัดนครศรีธรรมราช)',\n",
+       " 'เจ้าฟ้า',\n",
+       " 'อุดม',\n",
+       " 'อิเล็คโทรนิก้า',\n",
+       " 'จักรพรรดิมัคซีมีลีอานที่',\n",
+       " 'โทเกลัง',\n",
+       " 'ฮาโลเนน',\n",
+       " 'ซุนโกคู',\n",
+       " 'กองทัพที่',\n",
+       " 'บรานาห์',\n",
+       " 'ไอชิน',\n",
+       " 'ปลาสีนวล',\n",
+       " 'ภาษาโวลอฟ',\n",
+       " 'ประเทศเอธิโอเปียในพาราลิมปิกฤดูร้อน',\n",
+       " 'พระมหากษัตริย์สหราชอาณาจักร',\n",
+       " 'รางวัลนาฏราช',\n",
+       " 'โรคลมชักชนิดต่อเนื่อง',\n",
+       " 'ประเทศกานาในโอลิมปิกฤดูหนาว',\n",
+       " 'จุฬาลงกรณ์',\n",
+       " 'ทางรถไฟสายปากน้ำ',\n",
+       " 'รัซเซลล์',\n",
+       " 'แห่งเอ็สเอ็ส',\n",
+       " 'ครั้งที่',\n",
+       " 'แมโครโมเลกุล',\n",
+       " 'กีฬาฟุตบอลในกีฬาแห่งชาติครั้งที่',\n",
+       " 'อีฟว์',\n",
+       " 'เพนกวินแมเจลเล็น',\n",
+       " 'ไซเซฟ',\n",
+       " 'เจโรม',\n",
+       " 'ฮิสทรี',\n",
+       " 'กำฟ้า',\n",
+       " 'มนัสวิน',\n",
+       " 'บราเธอร์ส',\n",
+       " 'สหพันธ์ฟุตบอลฮังการี',\n",
+       " '(วงดนตรี)',\n",
+       " 'บรูตัส',\n",
+       " 'กนู',\n",
+       " 'ฮันกย็อง',\n",
+       " 'จุลละมณฑล',\n",
+       " 'ฮูดลัมแฮฟวัค',\n",
+       " 'แมงมุมแม่ม่ายดำ',\n",
+       " 'พรรคเตลังคนะ',\n",
+       " 'ฤดูกาล',\n",
+       " 'เส้นเมริเดียนที่',\n",
+       " 'ฮัน-บย็อล',\n",
+       " 'วี.ลีก',\n",
+       " 'จังหวัดโกรนิงเงิน',\n",
+       " 'พระเจ้าบรมวงศ์เธอ',\n",
+       " 'ใต้ทะเล']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
