Document: move md cell

--- a/Wikipedia.ipynb
+++ b/Wikipedia.ipynb
@@ -397,6 +397,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(\"Seperate space between names\" also covered by this)\n",
+    "> หลักการทั่วไปคือให้ใช้ชื่อที่เป็นที่รู้จักมากที่สุด โดยไม่ต้องมีคำนำหน้าชื่อ รวมทั้ง นาย/นาง/นางสาว คุณหญิง/ท่านผู้หญิง หรือ ยศ และตำแหน่งวิชาการ ดูเพิ่มที่ ยศหรือตำแหน่ง  \n",
+    ">  \n",
+    "> ใช้ ทักษิณ ชินวัตร แทนที่ พันตำรวจโท ดร. ทักษิณ ชินวัตร\n",
+    "  \n",
+    "Also exclude dot initials    \n",
+    "> ชื่อที่มีจุดหลังชื่อ ภาษาไทยหรือภาษาอื่น ให้เว้นวรรคหนึ่งครั้งหลังจุด  \n",
+    ">  \n",
+    "> ใช้ ป. อินทรปาลิต แทนที่ ป.อินทรปาลิต  \n",
+    "> จอร์จ เอช. ดับเบิลยู. บุช"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -709,22 +725,6 @@
     ">  \n",
     "> รายชื่อตัวละครใน{ชื่อเรื่อง} เช่น   รายชื่อตัวละครในมาจิเรนเจอร์\n",
     "> รายชื่อตอนใน{ชื่อเรื่อง} เช่น รายชื่อตอนในน้องสาวของผมไม่น่ารักขนาดนั้นหรอก  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Seperate space between names\n",
-    "> หลักการทั่วไปคือให้ใช้ชื่อที่เป็นที่รู้จักมากที่สุด โดยไม่ต้องมีคำนำหน้าชื่อ รวมทั้ง นาย/นาง/นางสาว คุณหญิง/ท่านผู้หญิง หรือ ยศ และตำแหน่งวิชาการ ดูเพิ่มที่ ยศหรือตำแหน่ง  \n",
-    ">  \n",
-    "> ใช้ ทักษิณ ชินวัตร แทนที่ พันตำรวจโท ดร. ทักษิณ ชินวัตร\n",
-    "  \n",
-    "Also exclude dot initials    \n",
-    "> ชื่อที่มีจุดหลังชื่อ ภาษาไทยหรือภาษาอื่น ให้เว้นวรรคหนึ่งครั้งหลังจุด  \n",
-    ">  \n",
-    "> ใช้ ป. อินทรปาลิต แทนที่ ป.อินทรปาลิต  \n",
-    "> จอร์จ เอช. ดับเบิลยู. บุช"
    ]
   },
   {
