Add: connect space too

--- a/Wikipedia.ipynb
+++ b/Wikipedia.ipynb
@@ -392,8 +392,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Seperate space\n",
-    "Handle the seperated words as different words"
+    "### Seperate/Integrate space\n",
+    "Handle the seperated words as different words + Connect them and handle them as one word"
    ]
   },
   {
@@ -433,7 +433,13 @@
     "\n",
     "for title in titles:\n",
     "    # \"space\" of the title is replaced by \"_\" in the data\n",
-    "    titles_temp.update(title.split(\"_\"))\n",
+    "    words = title.split(\"_\")\n",
+    "    \n",
+    "    # as different words\n",
+    "    titles_temp.update(words)\n",
+    "    \n",
+    "    # connect and as one word\n",
+    "    titles_temp.add([\"\".join(words)])\n",
     "        \n",
     "titles = titles_temp\n",
     "\n",
