--- a/Wikipedia.ipynb
+++ b/Wikipedia.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "362955"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        " 'ชลิตา_เฟื่องอารมณ์']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "[['บรั่นดี', 'วงดนตรี'], ['บรั่นดี']]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "353833"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
        " 'ท่าอากาศยานนานาชาติพาโร']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,16 +414,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "312807"
+       "465912"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
     "    titles_temp.update(words)\n",
     "    \n",
     "    # connect and as one word\n",
-    "    titles_temp.add([\"\".join(words)])\n",
+    "    titles_temp.add(\"\".join(words))\n",
     "        \n",
     "titles = titles_temp\n",
     "\n",
@@ -448,115 +448,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['การประท้วงโดยเผาตัวตายของชาวทิเบตในประเทศจีน',\n",
-       " 'บอซ',\n",
-       " 'Andong',\n",
-       " 'เหตุการณ์ความไม่สงบทางการเมืองในประเทศไทย',\n",
-       " 'แบตันรูช',\n",
-       " 'เคราซ์',\n",
-       " 'กาโตโปเลมีเดีย',\n",
-       " 'มหายุคมีโซโพรเทอโรโซอิก',\n",
-       " \"Ma'ulupekotofa\",\n",
-       " 'สภาขุนนาง',\n",
-       " 'Patagonia',\n",
-       " 'แรดดำ',\n",
-       " 'เทคโนโลยีอาหาร',\n",
-       " 'การลดขั้ว',\n",
-       " 'ตัวปัญหา',\n",
-       " 'Polokwane',\n",
-       " 'ลำเนา',\n",
-       " 'ค็อมร์',\n",
-       " 'พระเจ้าโจวเขา',\n",
-       " 'สิทธัตถะ',\n",
-       " 'มหาวิทยาลัยคอร์แนล',\n",
-       " 'ดนตรีอิเล็กทรอนิกส์บอดี',\n",
-       " 'มะป่วน',\n",
-       " 'ตำนานทอง',\n",
-       " 'ห่วงโซ่การสลาย',\n",
-       " 'อ.ศรีมหาโพธิ',\n",
-       " 'กัมปุงเซียม',\n",
-       " 'ศาสตราจารย์พิเศษ',\n",
-       " '\"แผนยึดครองโลกของเจ้าหญิงหิมะ\"',\n",
-       " 'วลาดีมีร์-ซุซดัล',\n",
-       " 'แนปาตา',\n",
-       " 'Ni-chōme',\n",
-       " 'ภาคกลาง',\n",
-       " 'จักรพรรดิเล',\n",
-       " 'คำศัพท์จากเรื่อง',\n",
-       " '1696',\n",
-       " 'มัต',\n",
-       " 'เฮนริช',\n",
-       " 'SSRIs',\n",
-       " 'Peritonsillar',\n",
-       " 'inch',\n",
-       " 'หย่อง',\n",
-       " 'Whitney',\n",
-       " 'ยุทธการโคมากิและนางากูเตะ',\n",
-       " 'ฟิฟตี',\n",
-       " 'ฟุตบอลชิงแชมป์อเมริกาใต้',\n",
-       " 'เส้นประสาทใบหน้าเป็นอัมพาต',\n",
-       " 'Pis',\n",
-       " 'อุลตร้าแมนคอสมอส',\n",
-       " 'ธงสีรุ้ง',\n",
-       " 'อ.เวียงสระ',\n",
-       " 'จัมบา!',\n",
-       " 'เกมดูดโลกมหัศจรรย์',\n",
-       " 'Sulfadiazine',\n",
-       " 'สุนทร',\n",
-       " 'หลวงปู่เจือ',\n",
-       " 'Mignard',\n",
-       " 'อำเภอคง',\n",
-       " 'lymphatic',\n",
-       " 'Atmospheric',\n",
-       " 'กะแท้',\n",
-       " 'กีซุก',\n",
-       " 'อิเล็คโทรนิก้า',\n",
-       " 'โจเซป',\n",
-       " 'รมิดา',\n",
-       " 'Interpersonal',\n",
-       " 'ซืออิง',\n",
-       " 'อาจละ',\n",
-       " 'ศูนย์กีฬาและสนามกีฬามหาราช',\n",
-       " 'โฮโนลูลู',\n",
-       " 'การปรากฏตัวของมอร์นิงมุซุเมะ',\n",
-       " 'ยศทหารโมซัมบิก',\n",
-       " 'camara',\n",
-       " 'Nishigaki',\n",
-       " 'แฟเวอริท',\n",
-       " 'ลอสท์โพรเฟ็ทส์',\n",
-       " 'เพ็ญนภางค์',\n",
-       " 'บริษัทการกระจายเสียงและแพร่ภาพของอเมริกัน',\n",
-       " 'Lessig',\n",
-       " 'สังฆเขตยอร์ค',\n",
-       " 'Shwebo',\n",
-       " 'ภาษาฟิลิปปินส์',\n",
-       " 'คณะกรรมการโอลิมปิกมาซิโดเนียเหนือ',\n",
-       " 'พระองค์เจ้าหญิงอรองค์อรรคยุพา',\n",
-       " 'ซ่งฮุ่ยจง',\n",
-       " 'สวนสัตว์เนปีดอ',\n",
-       " 'เล็ค',\n",
-       " 'เคเพลล์',\n",
-       " 'Elvedi',\n",
-       " 'ดวงอาทิตย์',\n",
-       " 'เจ้าชายแฮร์มัน',\n",
-       " 'คลองถนน',\n",
-       " 'จักษุแพทย์',\n",
-       " 'ไซตะมะสเตเดี้ยม2002',\n",
-       " 'ภาษากลุ่มเซลต์ภาคพื้นยุโรป',\n",
-       " 'สาร',\n",
-       " 'ไทรอัมพ์ส',\n",
-       " 'Bhutan',\n",
-       " 'หน่วยอิกอซ',\n",
-       " 'คุณครูผู้สิ้นหวัง']"
+       "['SanAntonio,TX',\n",
+       " 'เองรีกีดีเซนาฟีร์นังดิช',\n",
+       " 'ปลาการ์ตูนส้ม',\n",
+       " 'คาวิกา',\n",
+       " 'บางกอกซิตี้แชนแนล',\n",
+       " 'ปีเตอร์เบียร์ดสลีย์',\n",
+       " 'ตำนานสมเด็จพระนเรศวรมหาราชเดอะซีรีส์',\n",
+       " 'แลมโบกินี่มูร์เซียลาโก',\n",
+       " 'al-Razi',\n",
+       " 'แกลสส์',\n",
+       " 'เจี้ยนเหวิน',\n",
+       " 'AgnesChow',\n",
+       " 'Samart',\n",
+       " 'กระดูกเอทมอยด์',\n",
+       " 'ลีก้า',\n",
+       " 'เข็มกลัดฟิบิวลา',\n",
+       " 'Shijiazhuang',\n",
+       " 'พ.ศ.2047',\n",
+       " 'ปลากะพงแถบน้ำเงิน',\n",
+       " 'พ.ศ.1123',\n",
+       " 'เส้นเมริเดียนที่127',\n",
+       " 'ยูโซ',\n",
+       " 'ทรีมาโลส',\n",
+       " 'พระเจ้าหรรษวรมันที่1',\n",
+       " 'วัดท่าไชยศิริ',\n",
+       " 'Monumental',\n",
+       " 'DreamWorks,LLC',\n",
+       " 'สมเด็จพระราชินีนาถราซอเฮอรินาแห่งมาดากัสการ์',\n",
+       " 'Internetprotocolsuite',\n",
+       " 'HighDefinitionTV',\n",
+       " 'สโมสรฟุตบอลแมนเชสเตอร์ยูไนเต็ดในฤดูกาล2022–23',\n",
+       " 'ล้อตุนกำลัง',\n",
+       " 'ทาทูอิน',\n",
+       " 'ตำบลกำแพงเซา',\n",
+       " 'ฌอห์น',\n",
+       " 'SACD',\n",
+       " 'ราชสำนักแห่งเกาหลี',\n",
+       " 'ชีคมูจิบูร์เราะห์มาน',\n",
+       " 'ComputerspielemuseumBerlin',\n",
+       " 'พัชรี',\n",
+       " '2248',\n",
+       " 'พระเจ้าวรวงศ์เธอพระองค์เจ้าหญิงน้อง',\n",
+       " 'UniversityofSt.Andrews',\n",
+       " 'สโมสรฟุตบอลแมนเชสเตอร์ซิตีในฤดูกาล2013–14',\n",
+       " 'ประกาศสิทธิมนุษยชนและพลเมือง',\n",
+       " 'กรดไขมันโอเมกา3',\n",
+       " 'ลี่อิน',\n",
+       " 'กันดั้มดับเบิ้ลโอ',\n",
+       " 'พระที่นั่งนิพัทธพงศ์ถาวรวิจิตร',\n",
+       " 'พรรคนำไทย',\n",
+       " 'Dyn',\n",
+       " 'จังหวัดโฮร์โมซกอน',\n",
+       " 'บุคคลที่เกิดในปีพ.ศ.2534',\n",
+       " 'เวทมนตร์ใน',\n",
+       " 'เตกีลาซันไรส์',\n",
+       " 'ภาษามะนอง',\n",
+       " '.ve',\n",
+       " 'Canisaureus',\n",
+       " 'โรคสมองบาดเจ็บเรื้อรัง',\n",
+       " 'ฟาโรห์เซเคมเรคูทาวีโซเบคโฮเทป',\n",
+       " 'การเคลื่อนลงตามความชัน',\n",
+       " 'วัคซีนโรคบาดทะยัก',\n",
+       " 'มหารานีแห่งแผ่นดิน',\n",
+       " 'Starbucks',\n",
+       " 'Phalaenopsisamabilis',\n",
+       " 'MSN',\n",
+       " 'เตอร์กิชวูแมนส์วอลเลย์บอลลีก',\n",
+       " 'Huchotaimen',\n",
+       " 'พระองค์เจ้ามรกฎ',\n",
+       " 'ดิอิมพอสซิเบิล',\n",
+       " 'โจมา',\n",
+       " 'machina',\n",
+       " 'ยามาซากิซางารุ',\n",
+       " 'Image',\n",
+       " 'Triquetrumbone',\n",
+       " 'นายกรัฐมนตรีบาห์เรน',\n",
+       " 'Fiorentina',\n",
+       " 'อัสแซสซินส์ครีด:บลัดไลนส์',\n",
+       " 'MiguelPérezCuesta',\n",
+       " 'SuperShowTourConcertAlbum',\n",
+       " 'พงศาวดารเขมร',\n",
+       " 'หมึกยักษ์เล็ก',\n",
+       " 'Goldensnub-nosedmonkey',\n",
+       " 'ฮิโรโนบุซากางูจิ',\n",
+       " 'Antrodiacamphorate',\n",
+       " 'เรือหลวงพลายชุมพล',\n",
+       " 'กีฬาเรือพายในเอเชียนเกมส์2022',\n",
+       " 'การพับกระดาษ',\n",
+       " 'อาคารริงกูเกททาวเวอร์',\n",
+       " 'ListofcountriesbyGDP',\n",
+       " 'ยุคอีดีแอคารัน',\n",
+       " 'PrinceGabrielofThurnandTaxis',\n",
+       " 'bin',\n",
+       " 'Groningen',\n",
+       " 'วีแอลซี',\n",
+       " 'สามช่า',\n",
+       " 'เอ็นเอ๊กซ์ทีเทคโอเวอร์:โทรอนโต',\n",
+       " 'Cynometra',\n",
+       " 'ยุทธการที่แม่น้ำซอมม์',\n",
+       " 'อาบุลฮะซันบานีศาดร์']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,16 +577,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "243135"
+       "346494"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,115 +601,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['สงครามแห่งปารีส',\n",
-       " 'เท็นพอยท์สเอาท์ออฟเท็น',\n",
-       " 'ตี้หฺวัง',\n",
-       " 'โคชิก',\n",
-       " 'ตัวเลขอีทรัสคัน',\n",
-       " 'จี-สปอต',\n",
-       " 'มัตสยะ',\n",
-       " 'กรดไขมันไม่อิ่มตัวแบบมีพันธะคู่เดี่ยว',\n",
-       " 'เซียนตัดเซียน',\n",
-       " 'การถอดอักษรไทยเป็นอักษรโรมันแบบถ่ายเสียง',\n",
-       " 'เดมฟรอยลา',\n",
-       " 'อุทยานแห่งชาติคาร์ลสแบดแคเวิร์น',\n",
-       " 'วัดน้ำจั้น',\n",
-       " 'อับดุรเราะฮ์มาน',\n",
-       " 'จิ๋ว',\n",
-       " 'ดัชเชสแห่งแคมบริดจ์',\n",
-       " 'วิภาตะพันธุ์',\n",
-       " 'การสังหารหมู่ที่ดีแบยี่น',\n",
-       " 'มิวสิคัล',\n",
-       " 'ยูคานต์ทัชดิส',\n",
-       " 'ดูคาเยฟ',\n",
-       " 'บ่ายวันอาทิตย์บนเกาะลากร็องด์ยัต',\n",
-       " 'ปรากฏการณ์ขี้ปลาวาฬ',\n",
-       " 'อำเภอพะโต๊ะ',\n",
-       " 'ผู้กำกับภาพยนตร์ยอดเยี่ยม',\n",
-       " 'ข้อเสนอสำหรับยูโรเปียนซูเปอร์ลีกในฟุตบอล',\n",
-       " 'ออร์ทีเลียส',\n",
-       " 'ชโตฟ',\n",
-       " 'กาพย์ยานี',\n",
-       " 'พระวีระทู',\n",
-       " 'โดโลไมต์',\n",
-       " 'ยุควิกตอเรีย',\n",
-       " 'ภาษากลุ่มปาร์มี',\n",
-       " 'กลอนนิราศ',\n",
-       " 'สแล็กซ์',\n",
-       " 'อนิพรณ์',\n",
-       " 'ศึกชิงบัลลังก์จอมนาง',\n",
-       " 'การอกหัก',\n",
-       " 'กรดแกมมาไฮดรอกซีบิวทิริก',\n",
-       " 'เปนต์เนอร์',\n",
-       " 'กรมหลวงเทวะวงศ์วโรปการ',\n",
-       " 'พระเจ้าโจวเจินติ้ง',\n",
-       " 'อัลบั้มโปเตโต้',\n",
-       " 'การแลกเปลี่ยนสินค้า',\n",
-       " 'ต้อเนื้อ',\n",
-       " 'กรณีอื้อฉาวการเผยแพร่วีดิทัศน์บันทึกภาพโฟร์-มดขณะอาบน้ำ',\n",
-       " 'ศุข',\n",
-       " 'อนุสาวรีย์ผู้เสียสละ',\n",
-       " 'ลีลาปัญญาเลิศ',\n",
-       " 'สถานทูตอังกฤษประจำประเทศไทย',\n",
-       " 'กรีฑาชิงแชมป์เอเชีย',\n",
-       " 'เอ็มพี18',\n",
-       " 'หญ้าเทวดา',\n",
-       " 'คุนิโอะดอดจ์บอล',\n",
-       " 'วัดมหาสมณาราม',\n",
-       " 'หอสมุดประชาชนนิวยอร์ก',\n",
-       " 'การนอนหลับไม่เต็มอิ่ม',\n",
-       " 'เจ้าหญิงยาโนเรียแห่งบราซิล',\n",
-       " 'กีฬาหมากรุกจีนในเอเชียนเกมส์',\n",
+       "['รายชื่อเจ้าผู้ครองลีชเทินชไตน์',\n",
+       " 'ฟร็องซัวออลลองด์',\n",
+       " 'ความบริสุทธิ์',\n",
+       " 'สมณกรรมาธิการนครรัฐวาติกัน',\n",
+       " 'โปรแกรมจัดการดาวน์โหลด',\n",
+       " 'ไมเคิลแจ็กสันกับประเทศไทย',\n",
+       " 'พรอปเพอร์ตี',\n",
+       " 'เอ็กซ์เพลส',\n",
+       " 'จุดไกลดวงอาทิตย์ที่สุด',\n",
+       " 'ฌอสแปง',\n",
+       " 'ศรีชัยวัชรบุรี',\n",
+       " 'พระเจ้าโจวมู่หวัง',\n",
+       " 'ไมค์เบลส์',\n",
+       " 'ซูแปร์เลกาฤดูกาล2021–22',\n",
+       " 'สถานีอวกาศเทียนกง',\n",
+       " 'พระทีั่นั่งอัมพรสถาน',\n",
+       " 'ไทยแลนด์ก็อตทาเลนต์ซีซั่นที่2',\n",
+       " 'ฟูชิเซน',\n",
+       " 'รายชื่อตัวละครในเรื่อง',\n",
+       " 'อิชตาลล์',\n",
+       " 'นีดะ',\n",
+       " 'ฌอง-ลุกแซสซัส',\n",
+       " 'คณะรัฐมนตรีไทย',\n",
+       " 'เจ้าหญิงเอ็มมาแห่งวัลเด็คและไพร์มอนต์',\n",
+       " 'เมื่อผู้กล้าลาโลกแล้ว!เพราะชาวบ้านอย่างผมเผลอทำผู้กล้าตาย',\n",
+       " 'พระราชบัญญัติความสัมพันธ์ภายในครอบครัว',\n",
+       " 'ไคซูเกะ',\n",
+       " 'ยงยุทธสัจจวานิชย์',\n",
+       " 'โคโค่แจ๊ซ',\n",
+       " 'ชีวิตไม่ง่ายของนางร้าย',\n",
+       " 'อ.ภูผาม่าน',\n",
+       " 'เมืองฝาง',\n",
+       " 'ประเทศปากีสถานในโอลิมปิกฤดูร้อน1956',\n",
+       " 'นกเด้าลม',\n",
+       " 'วอลเลย์บอลชายชิงแชมป์แอฟริกา2021',\n",
+       " 'ชาลีผาย',\n",
+       " 'ประเทศโมซัมบิกในโอลิมปิกเยาวชนฤดูร้อน2014',\n",
+       " 'ไฟลามทุ่ง',\n",
+       " 'ลิขิตรักตะวันและจันทรา',\n",
+       " 'หายใจเร็ว',\n",
+       " 'เวสต์วิค',\n",
+       " 'พระเจ้าชาร์ลส์ที่',\n",
+       " 'ยุทธการที่หับป๋า',\n",
+       " 'รูกกีบีบี',\n",
+       " 'รูปร้อยเหลี่ยม',\n",
+       " 'แป้งณัฐธิดา',\n",
+       " 'ค.ศ.968',\n",
+       " 'พระเจ้าอัลฟอนโซที่13แห่งสเปน',\n",
+       " 'อาบราโมวิช',\n",
+       " 'มายาอลเวง',\n",
+       " 'มิสเตอร์ดี',\n",
+       " 'เมาตินี',\n",
+       " 'โนริอากิฟูจิโมโตะ',\n",
        " 'รักโง่ๆ',\n",
-       " 'หลอดเลือดดำรักแร้',\n",
-       " 'เสท',\n",
-       " 'กับนักรบศักดิ์สิทธิ์',\n",
-       " 'คามาตาริ',\n",
-       " 'เฟรชเมน',\n",
-       " 'โนริยูกิ',\n",
-       " 'เขตสหพันธ์คอเคซัสเหนือ',\n",
-       " 'บรรณารักษศาสตร์',\n",
-       " 'ทางไอออน',\n",
-       " 'เสริมลาภ',\n",
-       " 'พายุเอวิเนียร์',\n",
-       " 'อำเภอโพธิ์ไทร',\n",
-       " 'ปื๊ด',\n",
-       " 'เมทะดาตา',\n",
-       " 'หิรัณยัษฐิติ',\n",
-       " 'มหาวิทยาลัยเวย์นสเตต',\n",
-       " 'บอนโดเน่',\n",
-       " 'กรีนแฟลช',\n",
-       " 'หน่วยรับสารเคมี',\n",
-       " 'เดงูจิ',\n",
-       " 'เซแบสเตียน',\n",
-       " 'อินยัวร์แอเรียเวิลด์ทัวร์',\n",
-       " 'สมเด็จพระจักรพรรดิเมอยอง',\n",
-       " 'การตรวจปัสสาวะ',\n",
-       " 'เลิฟเนเวอร์ดายส์',\n",
-       " 'กรดไขมันไม่อิ่มตัวมีพันธะคู่เดียว',\n",
-       " 'เรือนริษยา',\n",
-       " 'ฮามิลล์',\n",
-       " 'เลดีพาเมลา',\n",
-       " 'สุภาวีระ',\n",
-       " 'แปซิฟิกตอนใต้',\n",
-       " 'แค',\n",
-       " 'ดาลตัน',\n",
-       " 'วัชกู',\n",
-       " 'สตรีในประเทศไทย',\n",
-       " 'วัดหน้าต่างนอก',\n",
-       " 'รายชื่อละครโทรทัศน์ของอาร์เอสและในเครือ',\n",
-       " 'ประเทศแอนติกาและบาร์บูดาในพาราลิมปิกฤดูร้อน',\n",
-       " 'สโมสรฟุตบอลอาเอกเอเธนส์',\n",
-       " 'การคมนาคมในจังหวัดเชียงใหม่']"
+       " 'จักรพรรดิซีกิสมุนด์แห่งจักรวรรดิโรมันอันศักดิ์สิทธิ์',\n",
+       " 'ประเทศเนปาลในพาราลิมปิกฤดูร้อน2020',\n",
+       " 'แบรม',\n",
+       " 'ซานธอส',\n",
+       " 'ผ้าซิ่นทิวมุก',\n",
+       " 'โรงเรียนมัธยมวัดหนองแขม',\n",
+       " 'ฟูจิที-3',\n",
+       " 'บ่ายวันอาทิตย์บนเกาะลากร็องด์ยัต',\n",
+       " 'พระบรมราชินี',\n",
+       " 'หม่อมหลวงสราลี',\n",
+       " 'ปาวรตี',\n",
+       " 'เบนซิมิดาโซล',\n",
+       " 'พระราชวังเดิม',\n",
+       " 'วัดแคนอก',\n",
+       " 'นครปกครองโดยตรงของประเทศจีน',\n",
+       " 'เคตช์วาโย',\n",
+       " 'วัดศรีจันทาราม',\n",
+       " 'กลุ่มดาวตาข่าย',\n",
+       " 'พระเจ้าวรวงศ์เธอพระองค์เจ้าวิภาวดีรังสิต',\n",
+       " 'รายชื่อตัวละครในสาวน้อยยอดนักสืบ',\n",
+       " 'สตรอนเทียม',\n",
+       " 'โทะโยะตะ',\n",
+       " 'สมเด็จพระราชินีนาถแอนน์แห่งเกรตบริเตน',\n",
+       " 'คนสองเพศ',\n",
+       " 'วัคซีนลดฤทธิ์',\n",
+       " 'นิวรอนสั่งการ',\n",
+       " 'พระวรสารนอกสารบบ',\n",
+       " 'อาสนวิหารกูต็องส์',\n",
+       " 'พระสุพรรณนพรัตน์ศิราภรณ์มงคล',\n",
+       " 'ทากาอากิโทมิมัตสึ',\n",
+       " 'ท้องฟ้าจำลองเนห์รู',\n",
+       " 'กองพลยานเกราะดิ่งพสุธาที่1แฮร์มันเกอริง',\n",
+       " 'การวิจัยเชิงทดลองทางคลินิก',\n",
+       " 'คลื่นความร้อนในเอเชียพ.ศ.2566',\n",
+       " 'เจ้าชายจอร์จ',\n",
+       " 'เกย์-ฟอร์-เพย์',\n",
+       " 'ในพระนามของพระบิดา',\n",
+       " 'โกเตง',\n",
+       " 'ซงโงกุน',\n",
+       " 'อาวุธยุทธสัมภาระ',\n",
+       " 'ประเทศเวียดนามในเอเชียนเกมส์1954',\n",
+       " 'คิมิโนะอุตะ',\n",
+       " 'สาธารณรัฐเวียดนาม',\n",
+       " 'สถานีมหาวิทยาลัยเกษตรศาสตร์',\n",
+       " 'โนลกัลลาเกอส์ไฮฟลายอิงเบิดส์',\n",
+       " 'อีวานเคร็ก']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
