Add: exclude list
by rule-based

--- a/Wikipedia.ipynb
+++ b/Wikipedia.ipynb
@@ -734,6 +734,267 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5011"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lists ariticles all starts from \"ราย\"\n",
+    "# Observe them first\n",
+    "\n",
+    "raay = [title for title in titles if title.startswith(\"ราย\")]\n",
+    "len(raay)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['รายชื่อไลต์โนเวลในซอร์ดอาร์ตออนไลน์',\n",
+       " 'รายชื่อผลงานอัลบั้มเพลงของเซลีน',\n",
+       " 'รายชื่อปลัดกระทรวงศึกษาธิการของไทย',\n",
+       " 'รายพระนามคู่สมรสในพระจักรพรรดิแห่งรัสเซีย',\n",
+       " 'รายชื่อไมโครซอฟต์วินโดวส์รุ่นต่างๆ',\n",
+       " 'รายชื่อนายกรัฐมนตรีอินเดีย',\n",
+       " 'รายชื่อบุคคลจากมหาวิทยาลัยกรุงเทพ',\n",
+       " 'รายนามผู้ประกาศข่าวและผู้รายงานข่าวสถานีวิทยุโทรทัศน์ไทยทีวีสีช่อง3',\n",
+       " 'รายชื่อเวทมนตร์คาถาในแฮร์รี่',\n",
+       " 'รายชื่อแหล่งมรดกโลกในประเทศออสเตรเลีย',\n",
+       " 'รายชื่อแหล่งมรดกโลกในหมู่เกาะมาร์แชลล์',\n",
+       " 'รายนามผู้บัญชาการทหารเรือไทย',\n",
+       " 'รายชื่อบุคคลสำคัญจากมหาวิทยาลัยเชียงใหม่',\n",
+       " 'รายชื่อเครื่องอิสริยาภรณ์อาเซอร์ไบจาน',\n",
+       " 'รายชื่อแหล่งมรดกโลกในประเทศกรีซ',\n",
+       " 'รายนามศิษย์เก่าโรงเรียนภ.ป.ร.ราชวิทยาลัยในพระบรมราชูปถัมภ์',\n",
+       " 'รายชื่อตัวละครในร็อคแมน',\n",
+       " 'รายพระนามพระกุลเชษฐ์ในราชวงศ์จักรี',\n",
+       " 'รายการข้าม',\n",
+       " 'รายพระนามและรายนามผู้ได้รับพระราชทานร.ว.',\n",
+       " 'รายการประเทศตามการคาดหมายคงชีพ',\n",
+       " 'รายชื่อโบราณสถานในจังหวัดนครศรีธรรมราชที่ขึ้นทะเบียนโดยกรมศิลปากร',\n",
+       " 'รายชื่อละครโทรทัศน์ทางสถานีโทรทัศน์ช่องจีเอ็มเอ็ม25',\n",
+       " 'รายชื่อเคานท์พาลาไทน์แห่งซไวบรึคเค็น',\n",
+       " 'รายชื่อชาวไทยที่มีอายุเกิน',\n",
+       " 'รายการแหล่งมรดกโลกในประเทศเติร์กเมนิสถาน',\n",
+       " 'รายนามผู้ปกครองร่วมอันดอร์รา',\n",
+       " 'รายนามประธานฟีฟ่า',\n",
+       " 'รายการธงในประเทศลาว',\n",
+       " 'รายชื่อโบราณสถานในจังหวัดชัยภูมิ',\n",
+       " 'รายพระนามคู่อภิเษกสมรสในพระมหากษัตริย์เดนมาร์ก',\n",
+       " 'รายชื่อภาพยนตร์ของพิกซาร์',\n",
+       " 'รายพระนามคู่อภิเษกสมรสในพระมหากษัตริย์แห่งอิรัก',\n",
+       " 'รายชื่อประเทศเรียงตามการบริโภคน้ำมัน',\n",
+       " 'รายพระนามเจ้าผู้ครองรัฐกาตาร์',\n",
+       " 'รายชื่อประเทศเรียงตามการส่งออกรถยนต์',\n",
+       " 'รายาอูงู',\n",
+       " 'รายชื่อผลงานของผลิตโชค',\n",
+       " 'รายชื่อผลงานของอุรัสยา',\n",
+       " 'รายชื่อเกมปี',\n",
+       " 'รายพระนามพระประมุขทิเบต',\n",
+       " 'รายชื่อภาพยนตร์ไทยพ.ศ.2476',\n",
+       " 'รายชื่อนายกรัฐมนตรีเดนมาร์ก',\n",
+       " 'รายชื่อบทภาพยนตร์ยอดเยี่ยม',\n",
+       " 'รายชื่อโบราณสถานในจังหวัดสระบุรี',\n",
+       " 'รายชื่อแหล่งมรดกโลกในประเทศสโลวีเนีย',\n",
+       " 'รายยวา',\n",
+       " 'รายชื่อสิ่งมีชีวิตที่ถูกตั้งชื่อตามคนดัง',\n",
+       " 'รายชื่อโบราณสถานในจังหวัดอุทัยธานี',\n",
+       " 'รายชื่อประเทศตามจำนวนประชากร',\n",
+       " 'รายชื่อวิดีโอเกมปี',\n",
+       " 'รายชื่อรหัสไปรษณีย์ไทยเรียงตามจังหวัด',\n",
+       " 'รายชื่อนางแบบวิกตอเรียส์ซีเคร็ต',\n",
+       " 'รายชื่อโบราณสถานในจังหวัดนครราชสีมา',\n",
+       " 'รายชื่อนายกรัฐมนตรีในสมเด็จพระเจ้าจอร์จที่6',\n",
+       " 'รายนามนักประพันธ์และรายชื่อวรรณกรรมที่ได้รับรางวัลพานแว่นฟ้า',\n",
+       " 'รายพระนาม',\n",
+       " 'รายนามเสนาบดีและรัฐมนตรีว่าการกระทรวงการคลัง',\n",
+       " 'รายชื่อธงในกองทัพยูเครน',\n",
+       " 'รายนามบุคคลสำคัญจากมหาวิทยาลัยธรรมศาสตร์',\n",
+       " 'รายชื่อทางแยกในเขตมีนบุรี',\n",
+       " 'รายชื่อฟอร์ช็อกและอาฟเตอร์ช็อกจากแผ่นดินไหวและคลื่นสึนามิในโทโฮะกุ',\n",
+       " 'รายการแหล่งมรดกโลกในประเทศอุซเบกิสถาน',\n",
+       " 'รายพระนามคู่อภิเษกสมรสในพระมหากษัตริย์เนเธอร์แลนด์',\n",
+       " 'รายชื่อฝนดาวตก',\n",
+       " 'รายชื่อนวนิยายกำลังภายใน',\n",
+       " 'รายชื่อสะพานในประเทศไทย',\n",
+       " 'รายชื่อสงครามกลางเมืองของอังกฤษ',\n",
+       " 'รายชื่อศิลปินกลุ่มเกาหลีใต้',\n",
+       " 'รายพระนามคู่อภิเษกสมรสในพระมหากษัตริย์แห่งเบลเยียม',\n",
+       " 'รายพระนามจักรพรรดิแห่งจักรวรรดิเม็กซิโก',\n",
+       " 'รายชื่อผู้ครองตำแหน่งมิสเตอร์โกลบอล',\n",
+       " 'รายพระนามจักรพรรดิแห่งออสเตรีย',\n",
+       " 'รายชื่อผลงานเพลงของวงบีสต์',\n",
+       " 'รายชื่อสถานีโทรทัศน์ญี่ปุ่น',\n",
+       " 'รายพระนามเจ้านายที่ได้รับการเฉลิมพระยศในสมัยกรุงรัตนโกสินทร์',\n",
+       " 'รายชื่อผลงานเพลงของวงทูเอเอ็ม',\n",
+       " 'รายชื่อธงชาติในทวีปอเมริกาเหนือ',\n",
+       " 'รายชื่อธาตุเรียงตามเลขอะตอม',\n",
+       " 'รายชื่อทางแยกในเขตธนบุรี',\n",
+       " 'รายชื่อวัดในจังหวัดสมุทรสงคราม',\n",
+       " 'รายชื่อสมรภูมิและยุทธการในสงครามกลางเมืองอเมริกา',\n",
+       " 'รายชื่อประเทศเรียงตามระดับความสูงเฉลี่ย',\n",
+       " 'รายชื่อตลาดหลักทรัพย์ในทวีปแอฟริกา',\n",
+       " 'รายชื่อประเทศเรียงตามการส่งออกเครื่องบินและยานอวกาศ',\n",
+       " 'รายนามองคมนตรีในรัชกาลสมเด็จพระเจ้าอยู่หัวมหาวชิราลงกรณ',\n",
+       " 'รายชื่อประธานาธิบดีสาธารณรัฐจีน',\n",
+       " 'รายชื่อหมา',\n",
+       " 'รายนามผู้อำนวยการสถานศึกษา',\n",
+       " 'รายชื่อประเทศเรียงตามการได้ส่วนแบ่งตลาดจากสมาร์ทโฟน',\n",
+       " 'รายนามประมุขแห่งรัฐยูโกสลาเวีย',\n",
+       " 'รายชื่อโรงเรียนในจังหวัดลำปาง',\n",
+       " 'รายชื่อนักแสดงในสตาร์วอร์ส',\n",
+       " 'รายชื่อสายการบินในมาเก๊า',\n",
+       " 'รายชื่อแหล่งมรดกโลกในประเทศเม็กซิโก',\n",
+       " 'รายชื่อเกมคอมพิวเตอร์และวิดีโอเกมเรียงตามประเภท',\n",
+       " 'รายชื่อโบราณสถานในจังหวัดสมุทรสงครามที่ขึ้นทะเบียนโดยกรมศิลปากร',\n",
+       " 'รายชื่ออัลบั้มของ',\n",
+       " 'รายชื่อมลรัฐและดินแดนของสหรัฐอเมริกาเรียงตามจำนวนประชากร',\n",
+       " 'รายชื่อเมืองหลวงทางประวัติศาสตร์ของอียิปต์']"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_samples(raay)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some seems to be not related to list-article.(Such as names, \"รายยวา\")\n",
+    "\n",
+    "Exclude them in rule-base"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "57"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not_list = []\n",
+    "\n",
+    "for title in raay:\n",
+    "    # a few articles have miss-tone-mark\n",
+    "    # -> check without tone-mark\n",
+    "    title_no_tone = pythainlp.util.remove_tonemark(title)\n",
+    "    \n",
+    "    #check if it is a list article in rule-based\n",
+    "    if (title_no_tone.startswith(\"รายการ\")\n",
+    "        or title_no_tone.startswith(\"รายชือ\")\n",
+    "        or title_no_tone.startswith(\"รายพระ\")\n",
+    "        or title_no_tone.startswith(\"รายนาม\")):\n",
+    "        \n",
+    "        #it's a list-article\n",
+    "        # -> exclude (skip)\n",
+    "        continue\n",
+    "    \n",
+    "    not_list.append(title)\n",
+    "    \n",
+    "len(not_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['รายาประไหมสุหรีอากงตวนกูฮัจญะห์ฮามินะห์ฮาไมดุน',\n",
+       " 'รายได้',\n",
+       " 'รายปุระ',\n",
+       " 'รายงานการประชุม',\n",
+       " 'รายได้มูลฐาน',\n",
+       " 'รายากูนิง',\n",
+       " 'รายาฮีเจา',\n",
+       " 'รายชิ่อสนามกีฬาเรียงตามความจุ',\n",
+       " 'รายงานกรณี',\n",
+       " 'รายาผิวขาว',\n",
+       " 'รายคอวิช',\n",
+       " 'รายงานอาหาร',\n",
+       " 'รายงานคนไข้',\n",
+       " 'รายงานผู้ป่วย',\n",
+       " 'รายาบีรู',\n",
+       " 'รายยวา',\n",
+       " 'รายงานเฮิรส์ช',\n",
+       " 'รายูวันปูเลาเกอลาปา',\n",
+       " 'รายละเอียดพระราชพิธีถวายพระเพลิงพระบรมศพพระบาทสมเด็จพระปรมินทรมหาภูมิพลอดุลยเดช',\n",
+       " 'รายาห์',\n",
+       " 'รายงานกรุงบูดาเปสต์เรื่องการประกันความมั่นคง',\n",
+       " 'รายงานทีหลัง',\n",
+       " 'รายงานอาหารโภชนาการกิจกรรมทางกายและการป้องกันมะเร็ง:ทัศนมิติโลก',\n",
+       " 'รายงานเค้ส',\n",
+       " 'รายาแห่งรัฐปะลิส',\n",
+       " 'รายงานเรื่องอาหารโภชนาการการออกกำลังกายและการป้องกันมะเร็ง:ทัศนมิติโลก',\n",
+       " 'ราย',\n",
+       " 'รายาแห่งซาราวัก',\n",
+       " 'รายงานประจำปี',\n",
+       " 'รายงานเรื่องอาหาร',\n",
+       " 'รายงานเฮิร์ช',\n",
+       " 'รายากับมังกรตัวสุดท้าย',\n",
+       " 'รายาแห่งซาราวะก์',\n",
+       " 'รายละเอียดพระราชพิธีพระราชทานเพลิงพระศพ',\n",
+       " 'รายงานเรื่องอาหารโภชนาการกิจกรรมทางกายและการป้องกันมะเร็ง:ทัศนมิติโลก',\n",
+       " 'รายา',\n",
+       " 'รายได้พื้นฐานถ้วนหน้าในประเทศบราซิล',\n",
+       " 'รายได้ประชาชาติ',\n",
+       " 'รายาฮีเยา',\n",
+       " 'รายวนปูเลาเกอราปา',\n",
+       " 'รายวนปูเลาเกอลาปา',\n",
+       " 'รายนานนท์',\n",
+       " 'รายาประไหมสุหรีอากง',\n",
+       " 'รายงานเคส',\n",
+       " 'รายงานความสุขโลก',\n",
+       " 'รายาอูงู',\n",
+       " 'รายหัว',\n",
+       " 'รายานนท์',\n",
+       " 'รายงานค่าใช้จ่าย',\n",
+       " 'รายได้พื้นฐาน']"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#check\n",
+    "get_samples(not_list, 50)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
